work experience added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Projects</a></li>
-							<li><a href="#two">LinkedIn</a></li>
-							<li><a href="#three">About Me</a></li>
+							<li><a href="#two">Work Experience</a></li>
+							<li><a href="#three">LinkedIn</a></li>
+							<li><a href="#four">About Me</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -46,7 +47,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/stock.png" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/stock.png" alt="Ruth Mercy" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Mythos Stock</h2>
@@ -58,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/face.png" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/face.png" alt="Ruth Mercy" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Facial Detection using Machine Learning</h2>
@@ -72,8 +73,29 @@
 						
 					</section>
 
+					<!-- Two -->
+					<section id="two" class="wrapper style2 spotlights">
+						<section>
+							<div class="content">
+								<div class="inner">
+									<h2>Southern Illinois University Edwardsville - Graduate Teaching Assistant</h2>
+									<p>Teaching lab experimentation techniques and procedures and grading tests for Biological Sciences classes, ensuring safety and effective learning. Class Size: 72</p>
+								</div>
+							</div>
+						</section>
+						<section>
+							<div class="content">
+								<div class="inner">
+									<h2>Accenture - Software Engineer</h2>
+									<p>Worked for 2 years where I implemented 10 interactive dashboards for Clients, utilizing tools such as Power BI, Microsoft Azure, Azure Boards, and Microsoft SQL Server and improving data analysis efficiency by 20% and user engagement by 15%. </p>
+								</div>
+							</div>
+						</section>
+						
+					</section>
+
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="three" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>LinkedIn</h2>
 							<p>Explore my professional journey and connect with me on LinkedIn to see my full profile, including my work experience, projects, and posts.</p>
@@ -86,7 +108,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="four" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
 							<p>I’m Ruth Mercy Mosuganti, a graduate student at Southern Illinois University Edwardsville pursuing a Master’s in Computer Science. I bring two years of experience as a Software Engineer at Accenture, where I developed and implemented data-driven solutions for clients.</p>
